--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,23 +1,13 @@
-- id: doi:10.1371/journal.pcbi.1007128
+- id: doi:10.1093/bfgp/elae042
   type: paper
   description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  date: 2020-12-4
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+  date: 2024-10-22
   buttons:
-    - type: manubot
-      link: https://greenelab.github.io/meta-review/
-    - type: source
-      text: Manuscript Source
-      link: https://github.com/greenelab/meta-review
     - type: website
-      link: http://manubot.org/
+      link: https://academic.oup.com/bfg/article-abstract/doi/10.1093/bfgp/elae042/7831150
   tags:
-    - open science
-    - collaboration
-  repo: greenelab/meta-review
+    - machine learning
+    - brain age
+  repo: wanglab/brainage-review
 
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-
-- id: doi:10.7554/eLife.32822
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+- id: doi:10.1101/2024.11.12.623073
