--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -10,6 +10,12 @@
     - brain age
   repo: wanglab/brainage-review
 
+- id: 10.1371/journal.pone.0076105
+
+- id: 10.1111/adb.12644
+
+- id: 10.1002/hbm.23146
+
 - id: doi:10.1101/2024.11.12.623073
 
 - id: 10.1038/s41598-020-65086-x
