--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,7 +1,6 @@
 - id: doi:10.1093/bfgp/elae042
   type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  date: 2024-10-22
+  description: This review paper presents recent machine learning techniques used in brain age estimation (BAE) studies.
   buttons:
     - type: website
       link: https://academic.oup.com/bfg/article-abstract/doi/10.1093/bfgp/elae042/7831150
@@ -25,3 +24,11 @@
 - id: 10.1038/srep18969
 
 - id: doi:10.3389/fnsys.2012.00063
+
+- id: 10.1016/j.neuropsychologia.2020.107549
+
+- id: 10.1007/s11682-016-9597-3
+
+- id: 10.1007/s00330-016-4221-x
+
+- id: 10.1155/2016/9849087
