--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
 title: Wang Lab at UNMC
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: Dr. Wang’s laboratory focuses on the intersection of machine learning and medical imaging.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
