--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,13 +1,15 @@
 - date: 2025-03-11
   title: "Ziyang won the **Best Poster Award** at the **CoNDA Center Colloquium**. Congratulations!"
   image: images/news.jpg
-- date: '2025-03-11'
+- date: 2025-03-11
   title: "Dr. Wang gave a presentation on **The Association between Brain Age and DNA Methylation Age at the Global and the Local Level** at the **CoNDA Center Colloquium**."
   image: images/news.jpg
 - date: 2025-01-06
   title: "Ruobing's abstract paper **Enhancing prostate pelvic multimodality data generating with conditional generative models: A Pix2Pix-based approach for MRI-to-PET synthesis** was accepted by **AACR Annual Meeting 2025**. Congratulations!"
+  image: images/news.jpg
 - date: 2025-01-06
   title: "Azzam's abstract paper was accepted by **AACR Annual Meeting 2025**. Congratulations!"
-- date: '2024-10-22'
+  image: images/news.jpg
+- date: 2024-10-22
   title: "Our review paper of **A review of artificial intelligence-based brain age estimation and its applications for related diseases** was published in **Briefings in Functional Genomics**. Congratulations to Azzam and all co-authors!"
   image: images/news.jpg
