--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,5 @@
 - date: 2025-03-11
-  title: "Ziyang won the **Best Poster Award** at the **CoNDA Center Colloquium**. Congratulations!"
+  title: Ziyang won the <b>Best Poster Award</b> at the **CoNDA Center Colloquium**. Congratulations!
   image: images/news.jpg
 - date: 2025-03-11
   title: "Dr. Wang gave a presentation on **The Association between Brain Age and DNA Methylation Age at the Global and the Local Level** at the **CoNDA Center Colloquium**."
