--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -5,10 +5,10 @@
   title: Dr. Wang gave a presentation on <b>The Association between Brain Age and DNA Methylation Age at the Global and the Local Level</b> at the <b>CoNDA Center Colloquium</b>.
   image: images/news.jpg
 - date: 2025-01-06
-  title: Ruobing's abstract paper <b>Enhancing prostate pelvic multimodality data generating with conditional generative models: A Pix2Pix-based approach for MRI-to-PET synthesis</b> was accepted by <b>AACR Annual Meeting 2025</b>. Congratulations!
+  title: An abstract paper of <b>Enhancing prostate pelvic multimodality data generating with conditional generative models: A Pix2Pix-based approach for MRI-to-PET synthesis</b> was accepted by <b>AACR Annual Meeting 2025</b>. Congratulations to Ruobing!
   image: images/news.jpg
 - date: 2025-01-06
-  title: Azzam's abstract paper was accepted by <b>AACR Annual Meeting 2025</b>. Congratulations!
+  title: An abstract paper was accepted by <b>AACR Annual Meeting 2025</b>. Congratulations to Azzam!
   image: images/news.jpg
 - date: 2024-10-22
   title: Our review paper of <b>A review of artificial intelligence-based brain age estimation and its applications for related diseases</b> was published in <b>Briefings in Functional Genomics</b>. Congratulations to Azzam and all co-authors!
