--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -10,6 +10,10 @@
 - date: 2025-01-06
   title: 'An abstract paper was accepted by "AACR Annual Meeting 2025". Congratulations to Azzam!'
   image: images/news.jpg
+- date: 2024-11-12
+  title: 'A preprint version of our paper of "Functional Connectivity Alterations in Cocaine Use Disorder: Insights from the Triple Network Model and the Addictions Neuroclinical Assessment Framework" is now available on BioRxiv.'
+  description: 'Details of the paper can be found at: <a href="https://www.biorxiv.org/content/10.1101/2024.11.12.623073v1" target="_blank">Details</a>'
 - date: 2024-10-22
   title: 'Our review paper of "A review of artificial intelligence-based brain age estimation and its applications for related diseases" was published in "Briefings in Functional Genomics." Congratulations to Azzam and all co-authors!'
   image: images/news.jpg
+  description: 'Details of the paper can be found at: <a href="https://academic.oup.com/bfg/article/doi/10.1093/bfgp/elae042/7831150" target="_blank">Details</a>'
