--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -12,6 +12,7 @@
   image: images/news.jpg
 - date: 2024-11-12
   title: 'A preprint version of our paper of "Functional Connectivity Alterations in Cocaine Use Disorder: Insights from the Triple Network Model and the Addictions Neuroclinical Assessment Framework" is now available on BioRxiv.'
+  image: images/news.jpg
   description: 'Details of the paper can be found <a href="https://www.biorxiv.org/content/10.1101/2024.11.12.623073v1" target="_blank">here</a>.'
 - date: 2024-10-22
   title: 'Our review paper of "A review of artificial intelligence-based brain age estimation and its applications for related diseases" was published in "Briefings in Functional Genomics." Congratulations to Azzam and all co-authors!'
