--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -7,8 +7,8 @@
 - date: 2025-01-06
   title: 'An abstract paper of "Enhancing prostate pelvic multimodality data generating with conditional generative models: A Pix2Pix-based approach for MRI-to-PET synthesis" was accepted by AACR Annual Meeting 2025. Congratulations to Ruobing!'
   image: images/news.jpg
-- date: 2025-01-06
-  title: 'An abstract paper was accepted by "AACR Annual Meeting 2025". Congratulations to Azzam!'
+- date: 2025-02-10
+  title: 'An abstract paper of "g -Rate–based machine learning model to predict overall survival (OS) in patients with metastatic prostate cancer (mPC) while on treatment" was published in "Journal of Clinical Oncology." Congratulations to Dr. Wang and Azzam!'
   image: images/news.jpg
 - date: 2024-11-12
   title: 'A preprint version of our paper of "Functional Connectivity Alterations in Cocaine Use Disorder: Insights from the Triple Network Model and the Addictions Neuroclinical Assessment Framework" is now available on BioRxiv.'
