--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -9,6 +9,7 @@
 - id: 10.1002/hbm.23146
 
 - id: 10.1101/2024.11.12.623073
+  image: https://www.biorxiv.org/sites/default/files/biorxiv_logo_homepage.png
 
 - id: 10.1038/s41598-020-65086-x
 
