--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -43,6 +43,7 @@
 - id: 10.1117/12.2217308
 
 - id: 10.3390/biom14040409
+  image: https://pub.mdpi-res.com/img/journals/biomolecules-logo.png?8600e93ff98dbf14
 
 - id: 10.1117/12.2216647
 
