--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -6,8 +6,10 @@
 - id: 10.1371/journal.pone.0076105
 
 - id: 10.1111/adb.12644
+  image: https://onlinelibrary.wiley.com/cms/asset/86536fbd-4d9b-41ba-a451-1362f4ff3a40/adb.v24.5.cover.jpg
 
 - id: 10.1002/hbm.23146
+  image: https://onlinelibrary.wiley.com/cms/asset/1939df3b-05c6-4108-9fc8-93e4c59a876c/hbm.v37.5.cover.jpg
 
 - id: 10.1101/2024.11.12.623073
   image: https://www.biorxiv.org/sites/default/files/biorxiv_logo_homepage.png
