--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -46,13 +46,16 @@
   image: https://ars.els-cdn.com/content/image/X0065230X.jpg
 
 - id: 10.1117/12.2217308
+  image: https://spie.org/Images/Graphics/ConferenceLogo/mi.svg
 
 - id: 10.3390/biom14040409
   image: https://pub.mdpi-res.com/img/journals/biomolecules-logo.png?8600e93ff98dbf14
 
 - id: 10.1117/12.2216647
+  image: https://spie.org/Images/Graphics/ConferenceLogo/mi.svg
 
 - id: 10.1117/12.2043424
+  image: https://spie.org/Images/Graphics/ConferenceLogo/mi.svg
 
 - id: 10.3389/fgene.2023.1256468
   image: https://curehht.org/wp-content/uploads/2017/11/Frontiers-in-Genetics-logo.png
