--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -31,7 +31,7 @@
   image: https://ars.els-cdn.com/content/image/X00283932.jpg
 
 - id: doi:10.1007/s11682-016-9597-3
-  image: https://media.springernature.com/w316/springer-static/cover-hires/journal/11682?as=webp
+  image: https://media.springernature.com/w230/springer-static/cover/journal/11682/11/1.jpg?as=webp
 
 - id: doi:10.1007/s00330-016-4221-x
   image: https://media.springernature.com/w316/springer-static/cover-hires/journal/330?as=webp
@@ -75,6 +75,7 @@
   image: https://www.biorxiv.org/sites/default/files/biorxiv_logo_homepage.png
 
 - id: doi:10.1007/978-3-319-68843-5_10
+  image: https://media.springernature.com/lw150/springer-static/cover-hires/series/8578?as=webp
 
 - id: doi:10.1109/APSAR.2009.5374134
 
