--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -52,6 +52,7 @@
   image: https://media.springernature.com/w316/springer-static/cover-hires/book/978-3-642-35428-1?as=webp
 
 - id: doi:10.1109/EMBC.2016.7591617
+  image: images/EMBC16.png
 
 - id: doi:10.1016/bs.acr.2024.06.005
   image: https://ars.els-cdn.com/content/image/X0065230X.jpg
