--- a/_config.yaml
+++ b/_config.yaml
@@ -3,7 +3,7 @@ title: Wang Lab at UNMC
 subtitle: 
 description: Dr. Wang’s laboratory focuses on the intersection of machine learning and medical imaging.
 header: images/background.jpg
-footer: images/background.jpg
+footer: images/UNMC.jpg
 proofer: false
 
 # site social media and other links
