--- a/_config.yaml
+++ b/_config.yaml
@@ -9,7 +9,7 @@ proofer: false
 # site social media and other links
 links:
   email: jiwang@unmc.edu
-  github: https://github.com/wanglab-unmc
+  github: wanglab-unmc
 
 ### jekyll settings
 
