--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -1,13 +1,21 @@
 events:
-  - date: "2024-04-05"
-    presenter: "Dr. Jieqiong Wang"
-    topic: "AI in Neuroimaging"
-    location: "Room 402, Neuroscience Building"
-  - date: "2024-04-12"
-    presenter: "John Doe"
-    topic: "Functional Connectivity in fMRI"
-    location: "Zoom"
-  - date: "2024-04-19"
+  - date: "2024-04-07"
     presenter: "Ziyang Xu"
-    topic: "BNST Segmentation with Deep Learning"
-    location: "Room 402"
+    topic: "An Introduction to 3D-trans-U-Net "
+    location: "DRC II 3001"
+  - date: "2024-04-14"
+    presenter: "Esther Ugwueke"
+    topic: "Pediatric low-grade glioma: Survival Prediction Using Machine Learning Models "
+    location: "DRC II 3001"
+  - date: "2024-04-21"
+    presenter: "Charlie Soh"
+    topic: "Deep Relation Learning for Regression and Its Application to Brain Age Estimation"
+    location: "DRC II 3001"
+  - date: "2024-04-21"
+    presenter: "Ruobing Liu"
+    topic: "Global-Local Transformer for Brain Age Estimation"
+    location: "DRC II 3001"
+  - date: "2024-05-05"
+    presenter: "Ruobing Liu"
+    topic: "Global-Local Transformer for Brain Age Estimation"
+    location: "DRC II 3001"
