--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -16,6 +16,6 @@ events:
     topic: "Global-Local Transformer for Brain Age Estimation"
     location: "DRC II 3001"
   - date: "2024-05-05"
-    presenter: "Ruobing Liu"
-    topic: "Global-Local Transformer for Brain Age Estimation"
+    presenter: "Ziyang Xu"
+    topic: "TBD"
     location: "DRC II 3001"
