--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -1,11 +1,27 @@
 events:
+  - date: "2025-03-03"
+    presenter: "Ziyang Xu"
+    topic: "Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminals with nnU-Net"
+    location: "DRC II 3001"
+  - date: "2025-03-10"
+    presenter: "Esther Ugwueke"
+    topic: "CTDE model: A deep and joint learning of longitudinal data for Alzhiemer's disease prediction"
+    location: "DRC II 3001"
+  - date: "2025-03-17"
+    presenter: "Charlie Soh"
+    topic: "BASE: Brain Age Standardized Evaluation"
+    location: "DRC II 3001"
+  - date: "2025-03-24"
+    presenter: "Ruobing Liu"
+    topic: "BPGAN-MRI to PET 3D Synthesis"
+    location: "DRC II 3001"
   - date: "2025-04-07"
     presenter: "Ziyang Xu"
-    topic: "An Introduction to 3D-trans-U-Net "
+    topic: "An Introduction to 3D-trans-U-Net"
     location: "DRC II 3001"
   - date: "2025-04-14"
     presenter: "Esther Ugwueke"
-    topic: "Pediatric low-grade glioma: Survival Prediction Using Machine Learning Models "
+    topic: "Pediatric low-grade glioma: Survival Prediction Using Machine Learning Models"
     location: "DRC II 3001"
   - date: "2025-04-21"
     presenter: "Charlie Soh"
@@ -17,5 +33,17 @@ events:
     location: "DRC II 3001"
   - date: "2025-05-05"
     presenter: "Ziyang Xu"
+    topic: "TBD"
+    location: "DRC II 3001"
+  - date: "2025-05-12"
+    presenter: "Esther Ugwueke"
+    topic: "TBD"
+    location: "DRC II 3001"
+  - date: "2025-05-19"
+    presenter: "Charlie Soh"
+    topic: "TBD"
+    location: "DRC II 3001"
+  - date: "2025-06-02"
+    presenter: "Ruobing Liu"
     topic: "TBD"
     location: "DRC II 3001"
