--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -107,3 +107,29 @@
 - id: doi:10.1200/JCO.2025.43.5_suppl.242
   image: https://ascopubs.org/action/showCoverImage?journalCode=jco&imgSize=small
 
+- id: doi:10.1158/1538-7445.AM2025-5016
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+- id: doi:10.1158/1538-7445.AM2025-6314
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+- id: doi:10.1158/1538-7445.AM2025-3620
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+- id: doi:10.1158/1538-7445.AM2025-1098
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+- id: doi:10.48550/arXiv.2504.17162
+  image: https://arxiv.org/static/browse/0.3.4/images/arxiv-logo-one-color-white.svg
+
+- id: doi:10.1158/1538-7445.AM2025-1104
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+- id: doi:10.1158/1538-7445.AM2025-7425
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+- id: doi:10.1158/1538-7445.AM2025-5022
+  image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
+
+
+  
