--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -33,7 +33,7 @@ events:
     location: "DRC II 3001"
   - date: "2025-05-12"
     presenter: "Ziyang Xu"
-    topic: "MR image harmonization"
+    topic: "MRI harmonization"
     location: "DRC II 3001"
   - date: "2025-05-19"
     presenter: "Esther Ugwueke"
