--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -37,7 +37,7 @@ events:
     location: "DRC II 3001"
   - date: "2025-05-19"
     presenter: "Esther Ugwueke"
-    topic: "TBD"
+    topic: "Treatment Efficacy in Prostate Cancer"
     location: "DRC II 3001"
   - date: "2025-06-02"
     presenter: "Charlie Soh"
