--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -133,3 +133,6 @@
 
 - id: doi:10.1101/2025.05.01.651699
   image: https://www.biorxiv.org/sites/default/files/biorxiv_logo_homepage.png
+
+- id: doi:10.1101/2025.05.20.655179
+  image: https://www.biorxiv.org/sites/default/files/biorxiv_logo_homepage.png
