--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -121,6 +121,7 @@
 
 - id: doi:10.48550/arXiv.2504.17162
   image: images/arxiv-logo.png
+  date: '2025-04-24'
   
 - id: doi:10.1158/1538-7445.AM2025-1104
   image: https://aacr.silverchair-cdn.com/aacr/content_public/journal/cancerres/issue/85/8_supplement_1/1/m_canres_85_8_supplement_1_cover.jpeg?Expires=1749086961&Signature=u5nAYKv7kIWhrYesW~JmkHTzokTOA5hrpyJbfwJXqCxThaL9~2R~7Lo1c0vM3aGzmQgyxJsSuwp5lmREt-3tqN4mZGooJQbeqSzB7elJ2kDiG-AIhsfWCRVdut~XeL~QfwStBxdTEE3mCPjYjdxL~59HuYOkMG1FP8luJmiipLkf1FBNG-lpXP56wqlvGt3pUAR-kcTicE8kruGTGMcQEZAoLjxqGLaUHYjAm4ewbJg9be0~LJcDeZQ4DxDGQfJ~5xy0FNOpYObtfOD~grTsVGBYDVDVyfuu4ZE9gP2iMB5luXv1hdLfcG-4u2DiqjlAV6kuVSUpbH1KUOIOSvNW9Q__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA
@@ -139,3 +140,4 @@
 
 - id: doi:10.48550/arXiv.2505.09105
   image: images/arxiv-logo.png
+  date: '2025-05-14'
