--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -73,3 +73,13 @@ events:
     presenter: "Ruobing Liu"
     topic: "TBD"
     location: "DRC II 3001"
+
+  - date: "2025-07-21"
+    presenter: "Ziyang Xu"
+    topic: "TBD"
+    location: "DRC II 3001"
+
+  - date: "2025-08-04"
+    presenter: "Esther Ugwueke"
+    topic: "TBD"
+    location: "DRC II 3001"
