--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -2,6 +2,10 @@
   title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of teh Bed Nucleus of the Stria Terminalis" was accepted by MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
   image: images/mlmi2025.png
 
+- date: 2025-08-04
+  title: 'Dr Wang gave a talk of "Advancing AI for Individualized Diagnosis and Prognosis: From Prenatal Heart Defects to Prostate Cancer Survival" on ICIBM 2025.'
+  image: images/ICIBM2025talkPic.jpeg
+
 - date: 2025-08-01
   title: 'Dr. Wang is awarded an NSF Smart and Connected Health (SCH) grant by NSF to develop a novel multi-modal deep learning and statistical framework to maximize health outcomes for breast cancer. It will be a four-year grant with a start date as Aug-01-2025. Congratulations!'
   image: https://www.hpcwire.com/wp-content/uploads/2022/07/nsf-logo-w-name-2022.jpg
