--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,5 @@
 - date: 2025-08-10
-  title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of teh Bed Nucleus of the Stria Terminalis" was accepted by MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
+  title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis" was accepted by MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
   image: images/mlmi2025.png
 
 - date: 2025-08-04
