--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -3,7 +3,7 @@
   image: images/mlmi2025.png
 
 - date: 2025-08-04
-  title: 'Dr Wang gave a talk of "Advancing AI for Individualized Diagnosis and Prognosis: From Prenatal Heart Defects to Prostate Cancer Survival" on ICIBM 2025.'
+  title: 'Dr. Wang gave a talk of "Advancing AI for Individualized Diagnosis and Prognosis: From Prenatal Heart Defects to Prostate Cancer Survival" on ICIBM 2025.'
   image: images/ICIBM2025talkPic.jpeg
 
 - date: 2025-08-01
