--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -101,7 +101,7 @@ events:
 
   - date: "2025-08-11"
     presenter: "Esther Ugwueke"
-    topic: "TBD"
+    topic: "Deep learning for survival analysis: a review"
     location: "DRC II 3001"
 
   - date: "2025-08-18"
