--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,13 +1,14 @@
 - date: 2025-08-10
-  title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis" was accepted by MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
+  title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis" was accepted by the MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
   image: images/mlmi2025.png
 
 - date: 2025-08-04
-  title: 'Dr. Wang gave a talk of "Advancing AI for Individualized Diagnosis and Prognosis: From Prenatal Heart Defects to Prostate Cancer Survival" on ICIBM 2025.'
+  title: 'Dr. Wang gave a talk on "Advancing AI for Individualized Diagnosis and Prognosis: From Prenatal Heart Defects to Prostate Cancer Survival" at the 2025 International Conference on Intelligent Biology and Medicine (ICIBM 2025) in Columbus, OH.'
   image: images/ICIBM2025talkPic.jpeg
+  description: 'Details of the conference can be found <a href="https://icibm2025.iaibm.org/Schedule_files/ICIBM2025%20Program%20Book_2025.07.23_v1.pdf" target="_blank">here</a>.'
 
 - date: 2025-08-01
-  title: 'Dr. Wang is awarded an NSF Smart and Connected Health (SCH) grant by NSF to develop a novel multi-modal deep learning and statistical framework to maximize health outcomes for breast cancer. It will be a four-year grant with a start date as Aug-01-2025. Congratulations!'
+  title: 'Dr. Wang is awarded an NSF Smart and Connected Health (SCH) grant by NSF to develop a novel multi-modal deep learning and statistical framework to maximize health outcomes for breast cancer. It will be a four-year grant with a start date of Aug-01-2025. Congratulations!'
   image: https://www.hpcwire.com/wp-content/uploads/2022/07/nsf-logo-w-name-2022.jpg
 
 - date: 2025-04-22
