--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- date: 2025-08-19
+  title: 'Esther presents poster "Early Clinical Decision-Making in Metastatic Castration-Resistant Prostate Cancer: A G-Rate Based AI model of Overall Survival Within Three Months of Therapy​" at Genetics, Cell Biology & Anatomy (GCBA) Symposium.'
+  image: images/studentForum2025.png
+
 - date: 2025-08-10
   title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis" was accepted by the MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
   image: images/mlmi2025.png
