--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -141,4 +141,6 @@
 - id: doi:10.48550/arXiv.2505.09105
   image: images/arxiv-logo.png
   date: '2025-05-14'
+
+- id: doi:10.1101/2025.05.01.651699
   
