--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- date: 2025-09-24
+  title: 'Dr. Wang is awarded a new NIH/NIGMS grant under the support of the UNMC Center for Heart and Vascular Research (CHVR) as the Project Leader. Congratulations!'
+  image: https://www.nih.gov/sites/default/files/styles/max_650x650/public/2025-01/nih-logo-2012_0.png?itok=HghcriN_
+
 - date: 2025-08-19
   title: 'Esther presents poster "Early Clinical Decision-Making in Metastatic Castration-Resistant Prostate Cancer: A G-Rate Based AI model of Overall Survival Within Three Months of Therapy​" at Genetics, Cell Biology & Anatomy (GCBA) Symposium.'
   image: images/studentForum2025.png
