--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,5 @@
 - date: 2025-09-24
-  title: 'Dr. Wang is awarded a new NIH/NIGMS grant under the support of the UNMC Center for Heart and Vascular Research (CHVR) as the Project Leader. Congratulations!'
+  title: "Dr. Wang is awarded the NIH/NIGMS Women's Health Supplemental Funding to the UNMC Center for Heart and Vascular Research (CHVR)! We will focus on developing AI models for the prenatal screening of congenital heart disease. Thanks for the generous support from NIH!"
   image: https://www.nih.gov/sites/default/files/styles/max_650x650/public/2025-01/nih-logo-2012_0.png?itok=HghcriN_
 
 - date: 2025-08-19
