--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -131,7 +131,7 @@ events:
 
   - date: "2025-09-22"
     presenter: "Esther Ugwueke"
-    topic: "TBD"
+    topic: "Application of a novel machine learning framework for predicting non-metastatic prostate cancer-specific mortality in men using the Surveillance, Epidemiology and End Results database"
     location: "DRC II 3001"
 
   - date: "2025-09-29"
@@ -141,10 +141,40 @@ events:
 
   - date: "2025-10-06"
     presenter: "Ruobing Liu"
-    topic: "TBD"
+    topic: "Predicting Alzheimer’s Disease Progression Using a Regression-Based Survival Model with Longitudinal Data"
     location: "DRC II 3001"
 
   - date: "2025-10-13"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3002"
+
+    - date: "2025-10-20"
+    presenter: "Ziyang Xu"
+    topic: "TBD"
+    location: "DRC II 3001"
+  
+  - date: "2025-10-27"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3001"
+
+  - date: "2025-11-03"
+    presenter: "Esther Ugwueke"
+    topic: "TBD"
+    location: "DRC II 3001"
+
+  - date: "2025-11-10"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3001"
+
+  - date: "2025-11-17"
+    presenter: "Ruobing Liu"
+    topic: "TBD"
+    location: "DRC II 3001"
+
+  - date: "2025-11-24"
     presenter: " - "
     topic: "No presentation on this day"
     location: "DRC II 3002"
