--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -155,8 +155,7 @@
 - id: doi:10.1002/aisy.202500635
   image: https://advanced.onlinelibrary.wiley.com/cms/asset/ef1af8a6-3ecb-4aa9-a63b-7f8be93bf14d/aisy.v7.9.cover.gif
 
-- id: doi:
-  title: 'nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis'
+- title: 'nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis'
   authors:
   - Ziyang Xu
   - Mohamed Azzam
