--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -178,3 +178,33 @@ events:
     presenter: " - "
     topic: "No presentation on this day"
     location: "DRC II 3002"
+
+  - date: "2025-12-01"
+    presenter: "Ziyang Xu"
+    topic: "TBD"
+    location: "DRC II 3001"
+  
+  - date: "2025-12-08"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3001"
+
+  - date: "2025-12-15"
+    presenter: "Esther Ugwueke"
+    topic: "TBD"
+    location: "DRC II 3001"
+
+  - date: "2025-12-22"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3001"
+
+  - date: "2025-12-29"
+    presenter: "Ruobing Liu"
+    topic: "TBD"
+    location: "DRC II 3001"
+
+  - date: "2026-01-05"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3002"
