--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -161,7 +161,7 @@ events:
 
   - date: "2025-11-03"
     presenter: "Esther Ugwueke"
-    topic: "TBD"
+    topic: "Cox-based deep learning survival prediction models​"
     location: "DRC II 3001"
 
   - date: "2025-11-10"
