--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -171,7 +171,7 @@ events:
 
   - date: "2025-11-17"
     presenter: "Ruobing Liu"
-    topic: "TBD"
+    topic: "Multi-Modal Deep Clustering Survival Machines for Alzheimer’s Disease Subtype Discovery"
     location: "DRC II 3001"
 
   - date: "2025-11-24"
