--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -168,4 +168,9 @@
   date: '2025-09-23'
   image: https://media.springernature.com/full/springer-static/cover-hires/book/978-3-032-09512-1?as=webp
 
+- id: 10.64898/2025.12.15.694538
+  image: images/biorxiv_logo.png
+
+- id: 10.64898/2025.12.22.696111
+  image: images/biorxiv_logo.png
   
