--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -196,7 +196,7 @@ events:
 
   - date: "2025-12-22"
     presenter: "Esther Ugwueke"
-    topic: "TBD"
+    topic: "Deep Survival Machines: Fully Parametric Survival Regression and Representation Learning for Censored Data With Competing Risks"
     location: "DRC II 3001"
 
   - date: "2026-01-05"
