--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -173,3 +173,6 @@
 
 - id: 10.64898/2025.12.22.696111
   image: images/biorxiv_logo.png
+
+- id: 10.64898/2025.12.29.696875
+  image: images/biorxiv_logo.png
