--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -155,17 +155,7 @@
 - id: doi:10.1002/aisy.202500635
   image: https://advanced.onlinelibrary.wiley.com/cms/asset/ef1af8a6-3ecb-4aa9-a63b-7f8be93bf14d/aisy.v7.9.cover.gif
   
-- title: 'nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis'
-  authors:
-  - Ziyang Xu
-  - Mohamed Azzam
-  - Marshall Bivens
-  - Marcus Dustin
-  - Shibiao Wan
-  - Jennifer Urbano Blackford
-  - Jieqiong Wang
-  publisher: Lecture Notes in Computer Science
-  date: '2025-09-23'
+- id: doi:10.1007/978-3-032-09513-8_61
   image: https://media.springernature.com/full/springer-static/cover-hires/book/978-3-032-09512-1?as=webp
 
 - id: doi:10.64898/2025.12.15.694538
