--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -216,7 +216,7 @@ events:
     
   - date: "2026-01-26"
     presenter: "Ruobing Liu"
-    topic: "TBD"
+    topic: "Discrete-Time Deep Learning Survival Analysis Methods"
     location: "DRC II 3001"
 
   - date: "2026-02-02"
