--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -7,7 +7,7 @@
   image: images/studentForum2025.png
 
 - date: 2025-08-10
-  title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis" was accepted by the MICCAI workshop MLMI 2025. Congratulations to Ziyang and all co-authors!'
+  title: 'Our paper "nnU-BNST: Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminalis" was accepted by the MICCAI workshop MLMI 2025. Congratulations to Ziyang, Azzam, and all co-authors!'
   image: images/mlmi2025.png
 
 - date: 2025-08-04
