--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -238,3 +238,18 @@ events:
     presenter: "Esther Ugwueke"
     topic: "TBD"
     location: "DRC II 3001"
+
+  - date: "2026-03-02"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3001"
+
+  - date: "2026-03-09"
+    presenter: "Ruobing Liu"
+    topic: "TBD"
+    location: "DRC II 3001"
+
+  - date: "2026-03-16"
+    presenter: " - "
+    topic: "No presentation on this day"
+    location: "DRC II 3001"
