--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -167,3 +167,5 @@
 - id: doi:10.64898/2025.12.29.696875
   image: images/biorxiv_logo.png
 
+- id: doi:10.1002/1878-0261.70211
+  image: https://febs.onlinelibrary.wiley.com/cms/asset/d6aa6108-7fa7-4f91-829d-732497be3045/mol2.v20.1.cover.jpg
