--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -168,4 +168,4 @@
   image: images/biorxiv_logo.png
 
 - id: doi:10.1002/1878-0261.70211
-  # image: https://febs.onlinelibrary.wiley.com/cms/asset/d6aa6108-7fa7-4f91-829d-732497be3045/mol2.v20.1.cover.jpg
+  image: https://febs.onlinelibrary.wiley.com/cms/asset/d6aa6108-7fa7-4f91-829d-732497be3045/mol2.v20.1.cover.jpg
