--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -245,7 +245,7 @@ events:
     location: "DRC II 3001"
 
   - date: "2026-03-09"
-    presenter: "Ruobing Liu"
+    presenter: " - "
     topic: "No presentation on this day"
     location: "DRC II 3001"
 
