--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -226,7 +226,7 @@ events:
 
   - date: "2026-02-09"
     presenter: "Esther Ugwueke"
-    topic: "TBD"
+    topic: "ResDeepSurv: A Survival Model for Deep Neural Networks Based on Residual Blocks and Self‑attention Mechanism"
     location: "DRC II 3001"
 
   - date: "2026-02-16"
