Update and rename events.yaml to meetings.yaml

--- a/_data/meetings.yaml
+++ b/_data/meetings.yaml
@@ -1,4 +1,4 @@
-events:
+meetings:
   - date: "2025-03-03"
     presenter: "Ziyang Xu"
     topic: "Deep Learning-Based Automated Segmentation of the Bed Nucleus of the Stria Terminals with nnU-Net"
