--- a/_data/conferences.yaml
+++ b/_data/conferences.yaml
@@ -1,6 +1,6 @@
 conferences:
-  - name: "CoNDA meeting"
-    location: "TBD"
-    date: "TBD"
-    deadline: "TBD"
-    link: "TBD"
+  - name: "CoNDA Center Seminar"
+    location: "UNMC DRC1 1005"
+    date: "2026-03-11"
+    deadline: "N/A"
+    link: "https://events.unmc.edu/event/conda-center-seminar-with-dr-rajesh-miranda-texas-am"
