--- a/_data/conferences.yaml
+++ b/_data/conferences.yaml
@@ -1,6 +1,11 @@
 conferences:
   - name: "CoNDA Center Seminar"
-    location: "UNMC DRC1 1005"
-    date: "2026-03-11"
+    location: "UNMC DRCI 1005"
+    date: "2026-03-11 12:00pm to 1:00pm CDT"
     deadline: "N/A"
     link: "https://events.unmc.edu/event/conda-center-seminar-with-dr-rajesh-miranda-texas-am"
+  - name: "CoNDA Center Colloquium"
+    location: "UNMC DRCI - Room 1002 (Auditorium), 550 Durham Research Plz, Omaha, NE 68108"
+    date: "2026-04-01 09:00am CT"
+    deadline: "Abstract Due Date: Monday, March 2, 2026"
+    link: "https://lp.constantcontactpages.com/ev/reg/3b5yvhx/lp/6f1dfc1d-e1f4-4e3d-ada8-fe6ce1ff046e"
